<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tip Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="enter_total_amount">Enter total amount</string>
    <string name="p10">10%</string>
    <string name="p15">15%</string>
    <string name="p20">20%</string>
    <string name="tip">Tip is:</string>

</resources>
