<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <EditText
        android:id="@+id/editTextTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:ems="10"
        android:gravity="center_vertical|center_horizontal"
        android:hint="@string/enter_total_amount"
        android:inputType="numberDecimal" >

        <requestFocus />
    </EditText>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextTotal"
        android:layout_below="@+id/editTextTotal"
        android:layout_marginTop="91dp" >

        <Button
            android:id="@+id/button10p"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/p10" />

        <Button
            android:id="@+id/button15p"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/p15" />

        <Button
            android:id="@+id/button20p"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/p20" />
    </LinearLayout>

    <TextView
        android:id="@+id/textViewTip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="69dp"
        android:text="@string/tip"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>